# econgym

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  targets.json
.github/workflows/: ci.yml  publish.yml
econgym/: __init__.py  config.py  core.py  metrics.py  registry.py  runner.py
econgym/agents/: __init__.py  base.py  fictitious_play.py  meanbased.py  qlearning.py  regret_matching.py  thompson.py  ucb1.py
econgym/envs/: __init__.py  bertrand.py  bertrand_diff.py  cournot.py  first_price.py  public_goods.py  repeated_pd.py  rubinstein.py  second_price.py
econgym/solvers/: __init__.py  best_response.py  closed_form.py  normal_form.py
examples/: quickstart.py
tests/: test_agent_fictitious_play.py  test_agent_regret_matching.py  test_agent_thompson.py  test_agent_ucb1.py  test_bytematch_golden.py  test_core.py  test_env.py  test_env_bertrand_diff.py  test_env_cournot.py  test_env_first_price.py  test_env_public_goods.py  test_env_repeated_pd.py  test_env_rubinstein.py  test_env_second_price.py  test_integration.py  test_metrics.py  test_properties.py  test_registry.py  test_reproduce_paper1.py  test_runner_native_mapping.py  test_runner_termination.py  test_solvers.py
tests/data/: bytematch_golden.npz  bytematch_golden_manifest.json
